2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/m2pa_sl.c: convert for log tracing, add service procedures
	* src/test/test-m2pa.c: correct poweron sequence

2007-05-17  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/isua_as.c: use mi_timer_requeue to requeue mi timers
	* src/drivers/m2ua_as.c: use mi_timer_requeue to requeue mi timers
	* src/drivers/m3ua_as.c: use mi_timer_requeue to requeue mi timers
	* src/drivers/sua_as.c: use mi_timer_requeue to requeue mi timers
	* src/drivers/tua_as.c: use mi_timer_requeue to requeue mi timers
	* src/drivers/ua_as.c: use mi_timer_requeue to requeue mi timers
	* src/modules/m2pa_sl.c: use mi_timer_requeue to requeue mi timers
	* src/modules/m2ua_as.c: use mi_timer_requeue to requeue mi timers
	* src/modules/m3ua_as.c: use mi_timer_requeue to requeue mi timers

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* sigtran.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-m2pa.at: testsuite factoring
	* tests/testsuite-m2ua_as.at: testsuite factoring
	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* src/drivers/isua_as.c: support for 2.6.20-1.2307.fc5
	* src/drivers/m2ua.c: support for 2.6.20-1.2307.fc5
	* src/drivers/m2ua_as.c: support for 2.6.20-1.2307.fc5
	* src/drivers/m3ua.c: support for 2.6.20-1.2307.fc5
	* src/drivers/m3ua_as.c: support for 2.6.20-1.2307.fc5