@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: isua_as.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/05/17 22:55:08 $
+ @(#) $RCSfile: isua_as.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/05/18 12:15:17 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/05/17 22:55:08 $ by $Author: brian $
+ Last Modified $Date: 2007/05/18 12:15:17 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: isua_as.c,v $
+ Revision 0.9.2.6  2007/05/18 12:15:17  brian
+ - careful not to flush timers
+
  Revision 0.9.2.5  2007/05/17 22:55:08  brian
  - use mi_timer requeue to requeue mi timers
 
@@ -67,10 +70,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: isua_as.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/05/17 22:55:08 $"
+#ident "@(#) $RCSfile: isua_as.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/05/18 12:15:17 $"
 
 static char const ident[] =
-    "$RCSfile: isua_as.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/05/17 22:55:08 $";
+    "$RCSfile: isua_as.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/05/18 12:15:17 $";
 
 #ifndef HAVE_KTYPE_BOOL
 #include <stdbool.h>
@@ -144,7 +147,7 @@ static char const ident[] =
 /* ============================== */
 
 #define ISUA_AS_DESCRIP	"ISUA/SCTP AS MTP STREAMS MULTIPLEXING DRIVER."
-#define ISUA_AS_REVISION	"OpenSS7 $RCSfile: isua_as.c,v $ $Name:  $ ($Revision: 0.9.2.5 $) $Date: 2007/05/17 22:55:08 $"
+#define ISUA_AS_REVISION	"OpenSS7 $RCSfile: isua_as.c,v $ $Name:  $ ($Revision: 0.9.2.6 $) $Date: 2007/05/18 12:15:17 $"
 #define ISUA_AS_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define ISUA_AS_DEVICE	"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
 #define ISUA_AS_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
@@ -14006,7 +14009,7 @@ lm_i_unlink(struct up *lm, queue_t *q, mblk_t *mp)
 	ua_unlink_free(tp);
 
 	/* Should probably flush queues in case a Stream head is reattached. */
-	flushq(RD(l->l_qtop), FLUSHALL);
+	flushq(RD(l->l_qtop), FLUSHDATA);
 	mi_copy_done(q, mp, 0);
 	return (0);
 }
@@ -14173,7 +14176,7 @@ lm_i_punlink(struct up *lm, queue_t *q, mblk_t *mp)
 	ua_unlink_free(tp);
 
 	/* Should probably flush queues in case a Stream head is reattached. */
-	flushq(RD(l->l_qtop), FLUSHALL);
+	flushq(RD(l->l_qtop), FLUSHDATA);
 	mi_copy_done(q, mp, 0);
 	return (0);
 }
