@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: m3ua_as.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2007/05/17 22:55:13 $
+ @(#) $RCSfile: m3ua_as.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2007/05/18 12:15:22 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/05/17 22:55:13 $ by $Author: brian $
+ Last Modified $Date: 2007/05/18 12:15:22 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: m3ua_as.c,v $
+ Revision 0.9.2.9  2007/05/18 12:15:22  brian
+ - careful not to flush timers
+
  Revision 0.9.2.8  2007/05/17 22:55:13  brian
  - use mi_timer requeue to requeue mi timers
 
@@ -121,10 +124,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: m3ua_as.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2007/05/17 22:55:13 $"
+#ident "@(#) $RCSfile: m3ua_as.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2007/05/18 12:15:22 $"
 
 static char const ident[] =
-    "$RCSfile: m3ua_as.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2007/05/17 22:55:13 $";
+    "$RCSfile: m3ua_as.c,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2007/05/18 12:15:22 $";
 
 /*
  *  This is an M3UA multiplexing driver for the AS side of the ASP-SGP communications.  It works like
@@ -229,7 +232,7 @@ static char const ident[] =
 /* ============================== */
 
 #define M3UA_AS_DESCRIP		"M3UA/SCTP AS MTP STREAMS MULTIPLEXING DRIVER."
-#define M3UA_AS_REVISION	"OpenSS7 $RCSfile: m3ua_as.c,v $ $Name:  $ ($Revision: 0.9.2.8 $) $Date: 2007/05/17 22:55:13 $"
+#define M3UA_AS_REVISION	"OpenSS7 $RCSfile: m3ua_as.c,v $ $Name:  $ ($Revision: 0.9.2.9 $) $Date: 2007/05/18 12:15:22 $"
 #define M3UA_AS_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define M3UA_AS_DEVICE		"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
 #define M3UA_AS_CONTACT		"Brian Bidulock <bidulock@openss7.org>"
@@ -14091,7 +14094,7 @@ lm_i_unlink(struct up *lm, queue_t *q, mblk_t *mp)
 	ua_unlink_free(tp);
 
 	/* Should probably flush queues in case a Stream head is reattached. */
-	flushq(RD(l->l_qtop), FLUSHALL);
+	flushq(RD(l->l_qtop), FLUSHDATA);
 	mi_copy_done(q, mp, 0);
 	return (0);
 }
@@ -14258,7 +14261,7 @@ lm_i_punlink(struct up *lm, queue_t *q, mblk_t *mp)
 	ua_unlink_free(tp);
 
 	/* Should probably flush queues in case a Stream head is reattached. */
-	flushq(RD(l->l_qtop), FLUSHALL);
+	flushq(RD(l->l_qtop), FLUSHDATA);
 	mi_copy_done(q, mp, 0);
 	return (0);
 }
