@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/05/18 12:01:57 $
+ @(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.14 $) $Date: 2007/05/18 12:15:32 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/05/18 12:01:57 $ by $Author: brian $
+ Last Modified $Date: 2007/05/18 12:15:32 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: m2pa_sl.c,v $
+ Revision 0.9.2.14  2007/05/18 12:15:32  brian
+ - careful not to flush timers
+
  Revision 0.9.2.13  2007/05/18 12:01:57  brian
  - trace logging and service procedures for m2pa
 
@@ -85,10 +88,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/05/18 12:01:57 $"
+#ident "@(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.14 $) $Date: 2007/05/18 12:15:32 $"
 
 static char const ident[] =
-    "$RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/05/18 12:01:57 $";
+    "$RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.14 $) $Date: 2007/05/18 12:15:32 $";
 
 #ifndef HAVE_KTYPE_BOOL
 #include <stdbool.h>
@@ -122,7 +125,7 @@ static char const ident[] =
 #include <ss7/sli_ioctl.h>
 
 #define M2PA_SL_DESCRIP		"M2PA/SCTP SIGNALLING LINK (SL) STREAMS MODULE."
-#define M2PA_SL_REVISION	"OpenSS7 $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/05/18 12:01:57 $"
+#define M2PA_SL_REVISION	"OpenSS7 $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.14 $) $Date: 2007/05/18 12:15:32 $"
 #define M2PA_SL_COPYRIGHT	"Copyright (c) 1997-2007 OpenSS7 Corporation.  All Rights Reserved."
 #define M2PA_SL_DEVICE		"Part of the OpenSS7 Stack for Linux Fast STREAMS."
 #define M2PA_SL_CONTACT		"Brian Bidulock <bidulock@openss7.org>"
@@ -8176,8 +8179,8 @@ sl_free_priv(queue_t *q)
 		sl->prev = &sl->next;
 		ensure(atomic_read(&sl->refcnt) > 1, sl_get(sl));
 		sl_put(sl);
-		flushq(sl->oq, FLUSHALL);
-		flushq(sl->iq, FLUSHALL);
+		flushq(sl->oq, FLUSHDATA);
+		flushq(sl->iq, FLUSHDATA);
 		sl->oq->q_ptr = NULL;
 		sl->oq = NULL;
 		ensure(atomic_read(&sl->refcnt) > 1, sl_get(sl));
