@@ -3,6 +3,9 @@
 	* src/modules/sctp/sctp2.c: final mods
 	* src/modules/m2pa/m2pa_sl.c: final mods
 
+	* src/modules/m2pa/m2pa_sl.c: careful not to flush timers
+	* src/modules/sccp/sccp.c: careful not to flush timers
+
 2007-05-17  Brian Bidulock  <bidulock@openss7.org>
 
 	* acinclude.m4: check for nf_reset
