@@ -3,6 +3,14 @@
 	* src/modules/m2pa_sl.c: convert for log tracing, add service procedures
 	* src/test/test-m2pa.c: correct poweron sequence
 
+	* src/drivers/isua_as.c: careful not to flush timers
+	* src/drivers/m2ua_as.c: careful not to flush timers
+	* src/drivers/m3ua_as.c: careful not to flush timers
+	* src/drivers/sua_as.c: careful not to flush timers
+	* src/drivers/tua_as.c: careful not to flush timers
+	* src/drivers/ua_as.c: careful not to flush timers
+	* src/modules/m2pa_sl.c: careful not to flush timers
+
 2007-05-17  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/isua_as.c: use mi_timer_requeue to requeue mi timers
